1. Use separate vcf files for each of the education use cases. 2.  Fix sample names for use cases. 3. Fix 1:1 genotype bug for education use case #2. 4. Proper spacing and size for larger matrix.

--- a/assets/css/sass/_levelEdu.sass
+++ b/assets/css/sass/_levelEdu.sass
@@ -153,7 +153,7 @@
     display: block !important
 
   #feature-matrix-note
-    padding-left: 105px !important
+    padding-left: 112px !important
 
   #matrix-harmful-note.level-edu
     display: inline-block !important
