--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -127,7 +127,7 @@
 #matrix-track #rank-variants-title {
   display: block !important; }
 #matrix-track #feature-matrix-note {
-  padding-left: 105px !important; }
+  padding-left: 112px !important; }
 #matrix-track #matrix-harmful-note.level-edu {
   display: inline-block !important; }
 #matrix-track #feature-matrix .y.axis text {
